@@ -7,6 +7,9 @@
 /* by means of an offset and a steering rate.                        */
 
 // $Log$
+// Revision 1.42  2007/11/21 22:55:49  fish
+// (untab)
+//
 // Revision 1.41  2007/06/23 00:04:04  ivan
 // Update copyright notices to include current year (2007)
 //
@@ -101,10 +104,10 @@ U64 hw_clock(void)
 {
 U64 temp_tod;
 
+    obtain_lock(&sysblk.todlock);
+
     /* Get the time of day (GMT) */
     temp_tod = universal_clock();
-
-    obtain_lock(&sysblk.todlock);
 
     /* Ajust speed and ensure uniqueness */
     hw_tod = hw_adjust(temp_tod);
