@@ -1,3 +1,5 @@
+22 Aug 2008 Fix TOD clock race condition identified by Fred Feucht
+            (fredfeucht) - by Marcin Cieslak [saper@system.pl] - Fish
 21 Aug 2008 Fix i/o-interrupt-queue race condition - Fish
 19 Aug 2008 Init LCS interface ASAP to fix wrong MAC being used - Fish
 13 Aug 2008 Fix bad guest IA after host interrupt during branch trace - Greg
